Clean up and bug fix
Fixed topic page header a tag logo overflowing header and added a tag to all pages
Fixed indenting
Added metadata to all pages
Changed topic page name to topic

--- a/Site/css/master.css
+++ b/Site/css/master.css
@@ -1,7 +1,7 @@
 /*
 
-Authors:
-Purpose:
+Authors: Syed, Yashas, Nick, Chris, Rohit
+Purpose: Deliver our Apache server content in a manner that is easy and beautiful to read
 
 */
 
@@ -48,8 +48,10 @@ header {
 
 /* nick */
 .nav-bar img {
+  margin: 0 20px;
   width: 152px;
-  margin: 4px 20px;
+  height: 60px;
+  padding: 4px 0px;
 }
 
 /* nick */
